styles.css
body {
    font-family: Arial, Helvetica, sans-serif;
}
.header {
    display: flex;
    justify-content: space-between;
    background: #1f2937;
    padding: 15px;
    padding-bottom: 50px;
}
h3 {
    font-size: 24px;
    color: #f9faf8;
    padding-left: 15px;
}
.header-logo {
    display: flex;
}
ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    align-items: center;
    
}
li {
    list-style: none;
    font-size: 18px;
    color: #E5E7EB;
    display: inline;
    margin-right: 15px;
}
h1 {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}
.container-text {
    display: flex;
    flex-direction: column;
    padding-left: 30px;
    width: 600px;
    padding-bottom: 50px;
}
.header-text {
    flex-wrap: wrap;
    font-size: 18px;
    color: #E5E7EB;
    padding: 0;
   margin-top: -25px;
   margin-bottom: 20px;
}
.sign-up {
    background: #3882f6;
    color: white;
    font-size: 18px;
    border-radius: 20px;
    width: 150px;
    height: 50px;
}
.image-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    padding: 10px
}
.main-image {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 600px;
    height: 335px;
    overflow: hidden;
    margin-left: 20px;
  }
  .main-container {
    display: flex;
    justify-content: center;
    background: #1f2937;
  }
  .section1 {
    display: flex;
    justify-content: center;
    flex-direction: column;
  }
  .section-head {
    display: flex;
    justify-content: center;
  }
  .info-headline {
    font-size: 36px;
    font-weight: bold;
    color: #1f2937
  }
  .card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 400px;
    margin: 20px;
  }
  .card-image {
    width: 200px;
    height: 200px;
    overflow: hidden;
    border: 5px solid rgb(71, 131, 243);
    border-radius: 15px;
    margin-bottom: 10px;
  }
  .card-text {
    text-align: center;
  }
  .grid {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-evenly;
    padding: 10px;
    flex-shrink: 0;
    margin-bottom: 50px;
  }
  .quote-section {
    background-color: #e5e7eb;
    display: flex;
    flex-direction: column;
    padding: 80px;
  }
  h2 {
    font-size: 36px;
    color: #1f2937;
    font-style: italic;
    font-weight: light;
  }
  h4 {
    display: flex;
    justify-content: flex-end;
    font-size: 20px;
    color: #1f2937;
    font-weight: bold;
    width: 600px;
    margin-top: -25px;
  }
  .cta-section {
    display: flex;
    padding: 50px;
    justify-content: center;
    align-items: center;
    height: 200px;
    
  }
  .cta-block {
    background-color: #3882f6;
    width: 1000px;
    height: 150px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 20px;
  }
  .call-text {
    display: flex;
    flex-direction: column;
    color: #f9faf8;
    margin-right: 30px;
  }
  .cta-title {
    font-size: 24px;
    color: #f9faf8;
    font-weight: bold;
  }
  .sign-button {
    display: flex;
    justify-content: center;
    align-items: center;
    background: #3882f6;
    color: white;
    font-size: 18px;
    border: 2px solid #E5E7EB;
    border-radius: 10px;
    width: 125px;
    height: 40px;
}
footer {
    display: flex;
    background-color: #1f2937;
    justify-content: center;
    align-items: center;
    height: 100px;
    color: #e5e7eb;
    font-size: 18px;
}

